--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,17 +4,14 @@
         xmlns="http://java.sun.com/xml/ns/javaee"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-
-		<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/view?zoom=12&center=34.4208%2C-119.6982&key=AIzaSyDUVRWdfOz13o7qpe_qF034-EdqIFtRK2o">
-    	    
-    	</iframe>		
+	
 
 <servlet>
     <servlet-name>Jersey Web Application</servlet-name>
     <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
     <init-param>
         <param-name>jersey.config.server.provider.packages</param-name>
-        <param-value>mavengaetestproject.mavengaetestproject</param-value>
+        <param-value>mavenproject.mavenproject</param-value>
     </init-param>
     <init-param>
         <!-- speed up initial Jersey loading by deactivating WADL -->
@@ -27,6 +24,8 @@
     <servlet-name>Jersey Web Application</servlet-name>
     <url-pattern>/context/*</url-pattern>
 </servlet-mapping>
+
+
 
    
 </web-app>
