--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,12 +33,9 @@
     <servlet-name>Jersey Web Application</servlet-name>
     <url-pattern>/context/*</url-pattern>
 </servlet-mapping>
-<servlet-mapping>
+<!--  <servlet-mapping>
     <servlet-name>MyServlet</servlet-name>
     <url-pattern>/context/*</url-pattern>
-</servlet-mapping>
-
-
-
+</servlet-mapping> -->
    
 </web-app>
