--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
-    <version>0.0.1-SNAPSHOT</version>
-
+    <version>1.0-SNAPSHOT</version>
     <groupId>mavenproject</groupId>
     <artifactId>mavenproject</artifactId>
 
@@ -34,6 +33,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+    		<groupId>com.google.apis</groupId>
+    		<artifactId>google-api-services-mapsengine</artifactId>
+    		<version>v1-rev4-1.16.0-rc</version>
+		</dependency>
+        <dependency>
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
@@ -53,6 +57,27 @@
             <version>${appengine.target.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+      		<groupId>com.google.apis</groupId>
+      		<artifactId>google-api-services-plus</artifactId>
+      		<version>v1-rev199-1.19.0</version>
+    	</dependency>
+    	<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>jetty</artifactId>
+			<version>7.0.0.pre5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.api.client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>1.4.1-beta</version>
+		</dependency>
+		
     </dependencies>
 
     <build>
