--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <appengine.app.version>1</appengine.app.version>
         <appengine.target.version>1.8.3</appengine.target.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <geotools.version>12-RC1</geotools.version>
     </properties>
 
     <dependencies>
@@ -41,8 +42,34 @@
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
+        </dependency>		
+		<dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-shapefile</artifactId>
+            <version>${geotools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-swing</artifactId>
+            <version>${geotools.version}</version>
+        </dependency>
+        <dependency>
+  			<groupId>org.geotools</groupId>
+  			<artifactId>gt-geojson</artifactId>
+  			<version>${geotools.version}</version>
+		</dependency>
+	<!--  	<dependency>
+ 			<groupId>org.jeo</groupId>
+ 			<artifactId>jeo-geojson</artifactId>
+			<version>0-SNAPSHOT</version>
+		</dependency> -->
+		
 
         <!-- Test Dependencies -->
         <dependency>
@@ -79,6 +106,33 @@
 		</dependency>
 		
     </dependencies>
+    
+	<repositories>
+		<repository>
+		    <id>maven2-repository.dev.java.net</id>
+		    <name>Java.net repository</name>
+		    <url>http://download.java.net/maven/2</url>
+		</repository>
+		<repository>
+		    <id>osgeo</id>
+		    <name>Open Source Geospatial Foundation Repository</name>
+		    <url>http://download.osgeo.org/webdav/geotools/</url>
+		</repository>
+    	<!--  <repository> Add the snapshot repository here
+        	<snapshots>
+            <enabled>true</enabled>
+        	</snapshots>
+        	<id>opengeo</id>
+        	<name>OpenGeo Maven Repository</name>
+        	<url>http://repo.opengeo.org</url>
+    	</repository> -->
+    	 <repository>
+         	<id>snapshots-repo</id>
+         	<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+         	<releases><enabled>false</enabled></releases>
+         	<snapshots><enabled>true</enabled></snapshots>
+		</repository>
+	</repositories>
 
     <build>
         <plugins>
